Added all pages from 2018 and replaced them with dynamic data

--- a/Grow.Server/Views/Shared/_DefaultLayout.cshtml
+++ b/Grow.Server/Views/Shared/_DefaultLayout.cshtml
@@ -64,13 +64,12 @@
                         @Html.ActionLink("Home", "Index", "Home")
                     </li>
                     <li class="submenu">
-                        @Html.ActionLink("Program", "Index", "Program")
+                        @Html.ActionLink("Program", "Program", "Home")
                         <ul>
                             <li>@Html.ActionLink("Calendar", "Program", "Home", null, null, "calendar", null, null)</li>
                             <li>@Html.ActionLink("Kickoff", "Program", "Home", null, null, "kickoff", null, null)</li>
                             <li>@Html.ActionLink("Midterm", "Program", "Home", null, null, "midterm", null, null)</li>
                             <li>@Html.ActionLink("Final", "Program", "Home", null, null, "final", null, null)</li>
-                            <li>@Html.ActionLink("Support program", "Program", "Home", null, null, "support", null, null)</li>
                         </ul>
                     </li>
                     <li class="submenu">
@@ -78,7 +77,7 @@
                         <ul>
                             <li>@Html.ActionLink("Teams", "Teams", "Home")</li>
                             <li>@Html.ActionLink("Mentors", "Mentors", "Home")</li>
-                            <li>@Html.ActionLink("Juges", "Judges", "Home")</li>
+                            <li>@Html.ActionLink("Judges", "Judges", "Home")</li>
                         </ul>
                     </li>
                     <li class="submenu">
@@ -104,8 +103,8 @@
             <ul class="copyright">
                 <li><a href="http://www.pioniergarage.de" class="icon">PionierGarage e.V</a></li>
                 <li><a href="http://html5up.net" class="icon">Design</a></li>
-                <li><a href="impressum.html" class="icon">Imprint</a></li>
-                <li><a href="datenschutz.html" class="icon">Privacy</a></li>
+                <li><a href="https://pioniergarage.de/impressum" class="icon">Imprint</a></li>
+                <li><a href="https://pioniergarage.de/datenschutz" class="icon">Privacy</a></li>
             </ul>
         </footer>
     </div>
