Added and integrated a design template for the admin area

--- a/Grow.Server/Styles/main.css
+++ b/Grow.Server/Styles/main.css
@@ -1,4 +1,4 @@
-﻿@import url("../../Styles/font-awesome.min.css");
+﻿@import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
 /*
 	Twenty by HTML5 UP
@@ -1147,7 +1147,7 @@ input[type="email"] {
   border: 0;
   position: relative; }
   .image:before {
-    background: url("../../Styles/images/overlay.png");
+    background: url("images/overlay.png");
     content: '';
     height: 100%;
     left: 0;
@@ -1371,7 +1371,7 @@ input[type="reset"],
     padding: 0; }
   .wrapper.style2 {
     background-color: #83d3c9;
-    background-image: url("../../Styles/images/light-bl.svg"), url("../../Styles/images/light-br.svg");
+    background-image: url("images/light-bl.svg"), url("images/light-br.svg");
     background-position: bottom left, bottom right;
     background-repeat: no-repeat, no-repeat;
     background-size: 25em, 25em;
@@ -1567,7 +1567,7 @@ input[type="reset"],
 #banner {
   background-attachment: scroll, scroll, scroll, fixed;
   background-color: #645862;
-  background-image: url("../../Styles/images/light-bl.svg"), url("../../Styles/images/light-br.svg"), url("../../Styles/images/overlay.png"), url("../../../images/banner.jpg");
+  background-image: url("images/light-bl.svg"), url("images/light-br.svg"), url("images/overlay.png"), url("../../images/banner.jpg");
   background-position: bottom left, bottom right, top left, top center;
   background-repeat: no-repeat, no-repeat, repeat, no-repeat;
   background-size: 25em, 25em, auto, cover;
@@ -1619,7 +1619,7 @@ input[type="reset"],
 
 /* Main */
 #main {
-  background-image: url("../../Styles/images/dark-tl.svg"), url("../../Styles/images/dark-tr.svg"), url("../../Styles/images/dark-bl.svg"), url("../../Styles/images/dark-br.svg");
+  background-image: url("images/dark-tl.svg"), url("images/dark-tr.svg"), url("images/dark-bl.svg"), url("images/dark-br.svg");
   background-position: top left, top right, bottom left, bottom right;
   background-repeat: no-repeat;
   background-size: 25em;
@@ -1642,7 +1642,7 @@ body.index #main {
 #cta {
   background-attachment: scroll, scroll, scroll, fixed;
   background-color: #645862;
-  background-image: url("../../Styles/images/light-tl.svg"), url("../../Styles/images/light-tr.svg"), url("../../Styles/images/overlay.png"), url("../../../images/banner.jpg");
+  background-image: url("images/light-tl.svg"), url("images/light-tr.svg"), url("images/overlay.png"), url("../../images/banner.jpg");
   background-position: top left, top right, top left, bottom center;
   background-repeat: no-repeat, no-repeat, repeat, no-repeat;
   background-size: 25em, 25em, auto, cover;
