Added authentication and a basic Account controller

--- a/Grow.Server/Areas/Admin/Views/Home/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Index";
-    Layout = "Layouts/_BackendLayout";
+    Layout = "Layouts/_AdminLayout";
 }
 
 <div class="row">
