--- a/Grow.Server/Views/Account/Login.cshtml
+++ b/Grow.Server/Views/Account/Login.cshtml
@@ -4,9 +4,12 @@
     ViewData["Title"] = "GROW Login";
 }
 
+<h4>Login</h4>
+<hr />
+<form method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
 
-<form asp-action="Login">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <input hidden asp-for="ReturnUrl" />
 
     <div class="form-group">
         <label asp-for="Email" class="control-label"></label>
@@ -21,7 +24,21 @@
     </div>
 
     <div class="form-group">
+        <div class="checkbox">
+            <label asp-for="RememberMe">
+                <input asp-for="RememberMe" />
+                @Html.DisplayNameFor(m => m.RememberMe)
+            </label>
+        </div>
+    </div>
+
+    <div class="form-group">
         <input type="submit" value="Sign In" class="btn btn-default" />
     </div>
 
+    <div class="form-group">
+        <p>
+            <a href="mailto:grow@pioniergarage.de">Forgot your password?</a>
+        </p>
+    </div>
 </form>
