--- a/Grow.Server/Views/Shared/Layouts/_AccountLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_AccountLayout.cshtml
@@ -25,11 +25,17 @@
                 Account
             </a>
         </li>
+        <li>
+            <a asp-controller="Account" asp-action="ChangePassword" asp-area="">
+                <i class="nc-icon nc-key-25"></i>
+                Change password
+            </a>
+        </li>
     }
 }
 
 <div class="row justify-content-md-center">
-    <div class="col-md-auto">
+    <div class="col-md-6 col-sm-12">
         <div class="card">
             <div class="card-body" style="padding: 40px">
 
